syntax = "proto3";

package client_stream;

option go_package = "github.com/xhyonline/grpc-stream/server-stream/gen";

service ServerStreamServer {
  // 请注意这个方法,返回有一个 stream 关键字
  // 注意这里我们只标记了响应是流式的,但是请求还是正常形式的
  rpc DemoMethod (DemoParma) returns (stream DemoResponse) {}
}

// DemoParma 示例参数
message DemoParma{
    string Name = 1;
}

// DemoResponse 示例响应
message DemoResponse{
  string Message = 1;
}